# Temperature-Controller-Embedded_Project

./: .cproject  .gitignore  .project  CMakeLists.txt  Embedded_Final_Project.atsln  Macros.h  README.md  main.c
Embedded_Final_Project/: CMakeLists.txt  Embedded_Final_Project.componentinfo.xml  Embedded_Final_Project.cproj  Macros.h  main.c  main.h  typedefs.h
Embedded_Final_Project/Debug/: Embedded_Final_Project.elf  Embedded_Final_Project.hex  Embedded_Final_Project.lss  Embedded_Final_Project.map  Embedded_Final_Project.srec  Makefile  main.d  makedep.mk
Embedded_Final_Project/Debug/HAL/KeyPad/: KeyPad.d  KeyPad_Cfg.d
Embedded_Final_Project/Debug/HAL/LCD/: LCD.d  LCD_Cfg.d
Embedded_Final_Project/Debug/HAL/TC72_Temp_sensor/: TC72.d
Embedded_Final_Project/Debug/MCAL/DIO/: DIO.d  DIO_Cfg.d
Embedded_Final_Project/Debug/MCAL/SPI/: SPI.d  SPI_Cfg.d
Embedded_Final_Project/HAL/: CMakeLists.txt
Embedded_Final_Project/HAL/ADC/: ADC.c
Embedded_Final_Project/HAL/Calibrator_Resistor/: CMakeLists.txt  Calibrator_Resistor.c  Calibrator_Resistor.h
Embedded_Final_Project/HAL/KeyPad/: CMakeLists.txt  KeyPad.c  KeyPad.h  KeyPad_Cfg.c  KeyPad_Cfg.h
Embedded_Final_Project/HAL/LCD/: CMakeLists.txt  LCD.c  LCD.h  LCD_Cfg.c  LCD_Cfg.h
Embedded_Final_Project/HAL/Scheduler/: CMakeLists.txt  Scheduler.c  Scheduler.h
Embedded_Final_Project/HAL/TC72_Temp_sensor/: CMakeLists.txt  TC72.c  TC72.h
Embedded_Final_Project/MCAL/: CMakeLists.txt
Embedded_Final_Project/MCAL/ADC/: ADC.c  ADC.h  CMakeLists.txt
Embedded_Final_Project/MCAL/DIO/: CMakeLists.txt  DIO.c  DIO.h  DIO_Cfg.c  DIO_Cfg.h
Embedded_Final_Project/MCAL/PWM/: CMakeLists.txt  PWM.c  PWM.h
Embedded_Final_Project/MCAL/SPI/: CMakeLists.txt  SPI.c  SPI.h
Embedded_Final_Project/MCAL/Timer/: CMakeLists.txt  Timer.c  Timer.h
Embedded_Final_Project/MGRs/: CMakeLists.txt
Embedded_Final_Project/MGRs/DisplayMGR/: CMakeLists.txt  Display_MGR.c  Display_MGR.h
Embedded_Final_Project/MGRs/LCDManager/: CMakeLists.txt  LCD_Manager.c  LCD_Manager.h
Embedded_Final_Project/MGRs/ModeMGR/: CMakeLists.txt  Mode_MGR.c  Mode_MGR.h
Embedded_Final_Project/MGRs/TempMGR/: CMakeLists.txt  Temp_MGR.c  Temp_MGR.h
Embedded_Final_Project/Manager/LCDManager/: LCD_Manager.c  LCD_Manager.h  LCD_Manager_cfg.h
Embedded_Final_Project/PWD_Test_protus/: Backup Of New Project.pdsbak  Last Loaded New Project.pdsbak  New Project.pdsprj  New Project.pdsprj.ABDALLAH-DRWESH.abdallah.workspace
HAL/: CMakeLists.txt
HAL/TC72_Temp_sensor/: CMakeLists.txt  TC72.h
MCAL/DIO/: DIO.c  DIO_Cfg.c  DIO_Cfg.h
MCAL/SPI/: SPI.c  SPI.h
Simulation/: ADC_with_LCD.pdsprj  Backup Of LCD.pdsbak  LCD.pdsprj  LCD.pdsprj.DESKTOP-VI2VV09.river.workspace  Last Loaded LCD.pdsbak  Last Loaded final_simulation.pdsbak  TC72.pdsprj  final_simulation.pdsprj  final_simulation.pdsprj.ABDULLA167-LENO.abdulla167.workspace  final_simulation.pdsprj.DESKTOP-VI2VV09.river.workspace
